--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
-  "name": "back-end-project",
+  "name": "app-versel",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
+
   "author": "",
+  
+  "engines": {
+    "node": "22.13.1"
+  },
+
   "license": "ISC",
   "description": "",
   "dependencies": {
