--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "app-versel",
   "version": "1.0.0",
   "main": "index.js",
-
+  "scripts": {
+    "start": "node index.js"
+  },
 
   "author": "",
   
